[feat] Update page url

--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Rounded" rel="stylesheet">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="윤재 ❤️ 세정 결혼합니다">
-  <meta property="og:description" content="2026년 4월 11일 오후 5시, 베스트웨스턴프리미어 강남">
-  <meta property="og:image" content="https://your-wedding-app.web.app/og_image.jpg">
-  <meta property="og:url" content="https://your-wedding-app.web.app">
+  <meta property="og:title" content="나윤재 ❤️ 신세정 결혼합니다">
+  <meta property="og:description" content="2026년 4월 11일(토) 오후 5시 | 베스트웨스턴프리미어 강남">
+  <meta property="og:image" content="https://wedding-invitation-2b1.pages.dev/icons/intro.jpeg">
+  <meta property="og:url" content="https://wedding-invitation-2b1.pages.dev/">
+
   <link rel="apple-touch-icon" href="icons/intro.jpeg">
 
   <style>
