[feat] Update preview image

--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="나윤재 ❤️ 신세정 결혼합니다">
   <meta property="og:description" content="2026년 4월 11일(토) 오후 5시 | 베스트웨스턴프리미어 강남">
-  <meta property="og:image" content="https://wedding-invitation-2b1.pages.dev/icons/intro.jpeg">
+  <meta property="og:image" content="https://wedding-invitation-2b1.pages.dev/icons/preview.jpeg">
   <meta property="og:url" content="https://wedding-invitation-2b1.pages.dev/">
 
   <link rel="apple-touch-icon" href="icons/intro.jpeg">
