[chore] fix to webp

--- a/web/index.html
+++ b/web/index.html
@@ -9,10 +9,10 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="나윤재 ❤️ 신세정 결혼합니다">
   <meta property="og:description" content="2026년 4월 11일(토) 오후 5시 | 베스트웨스턴 프리미어 강남호텔">
-  <meta property="og:image" content="https://wedding-invitation-2b1.pages.dev/icons/preview.jpeg">
+  <meta property="og:image" content="https://wedding-invitation-2b1.pages.dev/icons/preview.webp">
   <meta property="og:url" content="https://wedding-invitation-2b1.pages.dev/">
   <link rel="icon" type="image/png" href="favicon.ico"/>
-  <link rel="apple-touch-icon" href="icons/intro.jpeg">
+  <link rel="apple-touch-icon" href="icons/intro.webp">
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Material+Icons+Rounded" rel="stylesheet">
 
