[fix] Remove font

--- a/web/index.html
+++ b/web/index.html
@@ -11,17 +11,18 @@
   <meta property="og:description" content="2026년 4월 11일(토) 오후 5시 | 베스트웨스턴 프리미어 강남호텔">
   <meta property="og:image" content="https://wedding-invitation-2b1.pages.dev/icons/preview.webp">
   <meta property="og:url" content="https://wedding-invitation-2b1.pages.dev/">
-  <link rel="icon" type="image/png" href="favicon.ico"/>
-  <link rel="apple-touch-icon" href="icons/intro.webp">
 
-  <link rel="preload" href="assets/assets/images/intro.webp" as="image" type="image/webp">
-  <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
+  <link rel="preload" href="assets/images/intro.webp" as="image" type="image/webp">
+
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.css" />
 
   <style>
     /* 폰트 및 기본 스타일 최적화 */
     html, body {
       background-color: #ffffff;
-      font-family: 'Pretendard', -apple-system, sans-serif;
+      /* Pretendard를 최우선으로, 없으면 시스템 폰트 사용 */
+      font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, "Apple SD Gothic Neo", sans-serif !important;
     }
 
     /* 로딩 화면 전용 스타일 */
@@ -32,13 +33,13 @@
       z-index: 99999;
     }
 
-    /* [스킵 최적화] 페이드아웃 효과는 유지하되 더 빠르게 */
     #loading-indicator.fade-out {
       opacity: 0;
       transition: opacity 0.3s ease-out;
       pointer-events: none;
     }
 
+    /* 로딩창 폰트는 감성적인 Georgia 유지 */
     .loading-names { font-family: 'Georgia', serif !important; font-size: 26px; letter-spacing: 6px; color: #333; }
     .loading-ampersand { display: block; font-family: 'Georgia', serif !important; font-size: 20px; color: #FFA4A4; margin: 12px 0; }
     .loading-date { font-family: sans-serif; font-size: 13px; letter-spacing: 3px; color: #999; margin-top: 8px; }
@@ -46,17 +47,14 @@
     .loading-bar-fill { width: 40%; height: 100%; background: #FFA4A4; animation: barSlide 1.2s infinite; }
     @keyframes barSlide { 0% { transform: translateX(-120px); } 100% { transform: translateX(300px); } }
 
-    /* 플러터 앱 내부 폰트 강제 적용 */
-    flt-glass-pane {
+    /* 플러터 내부 캔버스 폰트 강제 */
+    flt-glass-pane, flt-scene-host {
       font-family: 'Pretendard', sans-serif !important;
     }
   </style>
 
   <script>
-    var W = {
-      groomName: '윤재', brideName: '세정',
-      date: '2026. 04. 11', title: '결혼식에 초대합니다'
-    };
+    var W = { groomName: '윤재', brideName: '세정', date: '2026. 04. 11' };
   </script>
 </head>
 <body>
@@ -70,7 +68,6 @@
 </div>
 
 <script>
-  // 로딩 데이터 주입
   document.getElementById('l-groom').textContent = W.groomName;
   document.getElementById('l-bride').textContent = W.brideName;
   document.getElementById('l-date').textContent = W.date;
@@ -80,22 +77,17 @@
 
   _flutter.loader.load({
     onEntrypointLoaded: async function(engineInitializer) {
-      // [최적화] renderer를 html로 고정하여 용량 절감 및 호환성 확보
       const appRunner = await engineInitializer.initializeEngine({
-        renderer: "html",
+        renderer: "html", // HTML 렌더러가 용량이 작고 빠릅니다.
         useColorEmoji: true
       });
 
       await appRunner.runApp();
 
-      // [스킵 최적화] 앱 실행 준비가 끝나면 즉시 로딩창 제거 루틴 시작
       var loader = document.getElementById('loading-indicator');
       if (loader) {
         loader.classList.add('fade-out');
-        // 애니메이션이 끝난 후 완전히 제거
-        setTimeout(function() {
-          loader.remove();
-        }, 300);
+        setTimeout(() => loader.remove(), 300);
       }
     }
   });
